[tool.poetry]
name = ${{values.name}}
version = "0.1.0"
description = ${{values.desc}}
authors = [${{ values.email }}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
